--- a/homeworks/vladyslav.kovalov_kovalov/6-adaptive/styles.css
+++ b/homeworks/vladyslav.kovalov_kovalov/6-adaptive/styles.css
@@ -19,6 +19,7 @@ body {
   border: 0;
   background: 0;
   font-size: 1rem;
+  cursor: pointer;
 }
 
 .button--action {
@@ -27,6 +28,11 @@ body {
   color: rgba(255, 255, 255, 1);
   padding: .5rem 1.25rem;
   border-radius: 25px;
+  transition: background-color .25s ease-in-out;
+}
+
+.button--action:hover {
+  background-color: rgba(226, 67, 41, .85);
 }
 
 .main-header {
@@ -66,3 +72,53 @@ body {
 .button__icon {
   margin-right: .5rem;
 }
+
+.hero-section {
+  background-color: rgba(226, 67, 41, 1);
+}
+
+.hero-section__container {
+  display: flex;
+  padding: 8rem 0;
+}
+
+.hero-section__title {
+  color: rgba(255, 255, 255, 1);
+  font-size: 3rem;
+  font-weight: 700;
+  line-height: 1.4;
+  margin-bottom: 2rem;
+}
+
+.hero-section__lead {
+  color: rgba(255, 255, 255, 1);
+  font-size: 1.125rem;
+  margin-bottom: 3rem;
+}
+
+.hero-section__tracking-form {
+  display: flex;
+  overflow: hidden;
+  border-radius: 50px;
+}
+
+.hero-section__tracking-form-input {
+  flex: 1;
+  outline: none;
+  border: 0;
+  font-size: 1rem;
+  padding: 1rem 2rem;
+}
+
+.hero-section__tracking-form-input::placeholder {
+  color: rgba(186, 186, 186, 1);
+  font-weight: 600;
+}
+
+.hero-section__tracking-form-button {
+  background-color: rgba(255, 106, 0, 1);
+  color: rgba(255, 255, 255, 1);
+  font-weight: 600;
+  padding: 1.25rem 1.5rem;
+}
+
