--- a/homeworks/maksym.selenkov_MaksymSelenkov/6-adaptive/style.css
+++ b/homeworks/maksym.selenkov_MaksymSelenkov/6-adaptive/style.css
@@ -1,7 +1,38 @@
-/*button {*/
-/*  border: none;*/
-/*  background: none;*/
-/*}*/
+@font-face {
+  font-family: "Pragmatica";
+  font-style: normal;
+  font-weight: 400;
+  src: local("Pragmatica-Light"), local("Pragmatica"),
+    url("./fonts/Pragmatica/Pragmatica-Light.woff2") format("woff2"),
+    url("./fonts/Pragmatica/Pragmatica-Light.woff") format("woff"),
+    url("./fonts/Pragmatica/Pragmatica-Light.ttf") format("truetype");
+}
+
+body {
+  font-family: "Pragmatica", serif;
+  font-size: 16px;
+  font-style: normal;
+  color: #444B51;
+}
+
+a {
+  text-decoration: none;
+  color: #444B51;
+}
+
+a:hover {
+  color: #0000B8;
+}
+
+button {
+  border: none;
+  background: none;
+}
+
+button:hover {
+  background-color: #0000B8;
+  cursor: pointer;
+}
 
 .wrapper {
   width: 100%;
@@ -40,9 +71,6 @@
 }
 
 .menu__phone-number {
-  text-decoration: none;
-  font-family: Pragmatica, serif;
-  font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 21px;
@@ -51,9 +79,6 @@
 }
 
 .menu__button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   padding: 12px 24px;
   max-width: 107px;
   width: 100%;
@@ -61,8 +86,6 @@
   height: 100%;
   background: #E24329;
   border-radius: 21.5px;
-  font-family: Pragmatica, serif;
-  font-style: normal;
   font-weight: 700;
   font-size: 16px;
   line-height: 110%;
@@ -78,8 +101,6 @@
 }
 
 .menu__language-bar {
-  font-family: Pragmatica, serif;
-  font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 21px;
@@ -89,7 +110,12 @@
 .page {
   background: #E24329;
   position: relative;
-  padding: 135px;
+  padding: 135px 135px 200px;
+}
+
+.page__heading {
+  display: flex;
+  flex-direction: column;
 }
 
 .heading__title {
@@ -97,8 +123,6 @@
   max-width: 731px;
   height: 100%;
   max-height: 204px;
-  font-family: Pragmatica, serif;
-  font-style: normal;
   font-weight: 700;
   font-size: 48px;
   line-height: 142%;
@@ -111,27 +135,30 @@
   max-width: 615px;
   height: 100%;
   max-height: 52px;
-  font-family: Pragmatica, serif;
-  font-style: normal;
   font-size: 18px;
   line-height: 144%;
   color: #FFF;
   margin-bottom: 30px;
 }
 
-/*.heading__form {*/
-/*  position: relative;*/
-/*}*/
+.heading__form {
+  width: 100%;
+  max-width: 570px;
+  height: 100%;
+  height: 60px;
+  display: flex;
+}
 
 .heading__input {
   width: 100%;
-  max-width: 570px;
+  max-width: 400px;
   height: 100%;
   max-height: 60px;
   background: #FAFAFA;
   border: 1px solid #BDBDBD;
   box-sizing: border-box;
-  border-radius: 30px;
+  border-radius: 30px 0 0 30px;
+  padding: 20px;
 }
 
 .heading__button {
@@ -141,15 +168,12 @@
   max-height: 60px;
   background: #FF6A00;
   border-radius: 0 30px 30px 0;
-  font-family: Pragmatica, serif;
-  font-style: normal;
   font-weight: 700;
   font-size: 16px;
   line-height: 16px;
   text-align: center;
   color: #FFF;
   margin-bottom: 200px;
-  margin-left: -170px;
 }
 
 .page__picture {
@@ -167,13 +191,12 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-top: 50px;
 }
 
 .section__title {
-  max-width: 358px;
+  max-width: 740px;
   max-height: 48px;
-  font-family: Pragmatica, serif;
-  font-style: normal;
   font-weight: 700;
   font-size: 40px;
   line-height: 120%;
@@ -184,11 +207,9 @@
 .section__text {
   max-width: 615px;
   max-height: 52px;
-  font-family: Pragmatica, serif;
-  font-style: normal;
   font-size: 18px;
   line-height: 144%;
-  text-align: center;
+  margin: 0 auto 60px;
 }
 
 .cards {
@@ -252,8 +273,8 @@
   margin: 0 135px;
   position: relative;
   display: flex;
-  justify-content: flex-end;
-  align-items: center;
+  flex-direction: column;
+  align-items: flex-end;
 }
 
 .apply__picture {
@@ -268,14 +289,41 @@
 
 .apply__heading {
   max-width: 475px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 140px 0;
+}
+
+.apply__title {
+  max-width: 740px;
+  max-height: 48px;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 120%;
+  color: #444B51;
+}
+
+.apply__button {
+  padding: 12px 24px;
+  max-width: 200px;
+  width: 100%;
+  max-height: 50px;
+  height: 100%;
+  background: #E24329;
+  border-radius: 21.5px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 110%;
+  color: #FFF;
 }
 
 .news {
-  margin: 400px 135px 250px;
+  margin: 100px 135px 250px;
 }
 
 .news__heading {
-  margin-bottom: 150px;
+  margin-bottom: 100px;
 }
 
 .news__items {
@@ -298,7 +346,7 @@
 }
 
 .clients {
-  margin: 0 135px;
+  margin: 60px 135px;
 }
 
 .clients__logo {
@@ -306,4 +354,84 @@
   flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
+}
+
+.footer {
+  background: #FFF2EF;
+}
+
+.footer__info {
+  margin: 0 270px;
+  display: flex;
+  flex-wrap: wrap;
+  padding-top: 30px;
+}
+
+.footer__about {
+  width: 50%;
+  max-width: 370px;
+  margin-right: 80px;
+}
+
+.about__text {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 144%;
+}
+
+.about__socials {
+  margin: 30px 0;
+}
+
+.footer__menu {
+  width: 50%;
+  display: flex;
+}
+
+.footer__links {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  margin-right: 80px;
+}
+
+.links__title {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 117%;
+}
+
+.footer__policy {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+}
+
+.policy__title {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 117%;
+}
+
+.footer__link {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+}
+
+.copyright {
+  width: 100%;
+  max-width: 1440px;
+  max-height: 50px;
+  background: #E24329;
+}
+
+.copyright__text {
+  width: 100%;
+  max-width: 250px;
+  color: #FFF;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  margin: 0 auto;
 }
