--- a/homeworks/maksym.selenkov_MaksymSelenkov/6-adaptive/style.css
+++ b/homeworks/maksym.selenkov_MaksymSelenkov/6-adaptive/style.css
@@ -158,7 +158,7 @@ button:hover {
   border: 1px solid #BDBDBD;
   box-sizing: border-box;
   border-radius: 30px 0 0 30px;
-  padding: 20px;
+  padding: 18px 40px;
 }
 
 .heading__button {
@@ -210,6 +210,7 @@ button:hover {
   font-size: 18px;
   line-height: 144%;
   margin: 0 auto 60px;
+  text-align: center;
 }
 
 .cards {
@@ -229,6 +230,7 @@ button:hover {
   justify-content: center;
   align-items: center;
   padding: 24px;
+  text-align: center;
 }
 
 .card01 {
@@ -302,6 +304,14 @@ button:hover {
   font-size: 40px;
   line-height: 120%;
   color: #444B51;
+}
+
+.apply__text {
+  max-width: 615px;
+  max-height: 52px;
+  font-size: 18px;
+  line-height: 144%;
+  margin: 0 auto 60px;
 }
 
 .apply__button {
