--- a/homeworks/vladyslav.kovalov_kovalov/6-adaptive/styles.css
+++ b/homeworks/vladyslav.kovalov_kovalov/6-adaptive/styles.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "Pragmatica";
+  src: url("fonts/Pragmatica-Book.ttf");
+}
+
 *,
 *::before,
 *::after {
@@ -7,7 +12,8 @@
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Pragmatica", Arial, Helvetica, sans-serif;
+  letter-spacing: 1px;
 }
 
 .page-container {
