--- a/homeworks/maksym.selenkov_MaksymSelenkov/6-adaptive/style.css
+++ b/homeworks/maksym.selenkov_MaksymSelenkov/6-adaptive/style.css
@@ -445,3 +445,37 @@ button:hover {
   line-height: 150%;
   margin: 0 auto;
 }
+
+@media (max-width: 768px) {
+
+  .page__picture {
+    display: none;
+  }
+
+  .apply__picture {
+    display: none;
+  }
+
+  .card {
+    width: 35%;
+  }
+
+  .clients__logo * {
+    max-width: 30%;
+  }
+}
+
+@media (max-width: 320px) {
+
+  .page__picture {
+    display: none;
+  }
+
+  .apply__picture {
+    display: none;
+  }
+
+  .clients__logo * {
+    max-width: 100%;
+  }
+}
